--- a/5-TDNN/TNDD_0.3.ipynb
+++ b/5-TDNN/TNDD_0.3.ipynb
@@ -69,6 +69,45 @@
     "end\n",
     "dlmwrite('result/20161218_1_result_repeat_4_delay_1-30_hid_30.dat', result, 'delimiter', '\\t');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name                Size                   Bytes  Class     Attributes\n",
+      "\n",
+      "  OISST            1688x20800            280883200  double              \n",
+      "  delay_times         1x1                        8  double              \n",
+      "  repeat              1x1                        8  double              \n",
+      "  result             80x20                   12800  double              \n",
+      "  result_one          1x20                     160  double              \n",
+      "  uwnd             1688x20800            280883200  double              \n",
+      "  vwnd             1688x20800            280883200  double              \n",
+      "  x_train          1688x62400            842649600  double              \n",
+      "  y_train          1688x9                   121536  double              \n",
+      "  zones_Prec       1688x9                   121536  double\n"
+     ]
+    }
+   ],
+   "source": [
+    "whos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
