add doc and test

--- a/5-TDNN/TNDD_0.3.ipynb
+++ b/5-TDNN/TNDD_0.3.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -84,6 +84,7 @@
       "Name                Size                   Bytes  Class     Attributes\n",
       "\n",
       "  OISST            1688x20800            280883200  double              \n",
+      "  ans                 1x1                        8  double              \n",
       "  delay_times         1x1                        8  double              \n",
       "  repeat              1x1                        8  double              \n",
       "  result             80x20                   12800  double              \n",
@@ -98,6 +99,89 @@
    ],
    "source": [
     "whos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "% idx   hiddenLayerSize delay_weeks trainPerformance    valPerformance  testPerformance performance trainR  valR    testR   R   region1 region2 region3 region4 region5 region6 region7 region8 region9\n",
+    "% result = tdnn_train(X, Y, delay_times, hiddenLayerSize)\n",
+    "result = [];\n",
+    "for delay_times = 21:30\n",
+    "    for repeat = 1:10\n",
+    "        result_one = tdnn_train(x_train, y_train, delay_times, 30);\n",
+    "        result = [result; result_one];\n",
+    "    end\n",
+    "end\n",
+    "dlmwrite('result/20161220_1_result_repeat_10_delay_21-30_hid_30.dat', result, 'delimiter', '\\t');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name                Size                   Bytes  Class     Attributes\n",
+      "\n",
+      "  OISST            1688x20800            280883200  double              \n",
+      "  ans                 1x1                        8  double              \n",
+      "  delay_times         1x1                        8  double              \n",
+      "  repeat              1x1                        8  double              \n",
+      "  result              0x0                        0  double              \n",
+      "  result_one          1x20                     160  double              \n",
+      "  uwnd             1688x20800            280883200  double              \n",
+      "  vwnd             1688x20800            280883200  double              \n",
+      "  x_train          1688x62400            842649600  double              \n",
+      "  y_train          1688x9                   121536  double              \n",
+      "  zones_Prec       1688x9                   121536  double\n"
+     ]
+    }
+   ],
+   "source": [
+    "whos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dlmwrite('result/20161220_1_result_repeat_10_delay_21-30_hid_30.dat', result, 'delimiter', '\\t');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans =\n",
+      "\n",
+      "    30    20\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_one(2:3)"
    ]
   },
   {
